pass1/Array/015_3Sum_M_acpt/log
solution.cpp:50:9: error: expected unqualified-id before 'return'
         return res;
         ^
solution.cpp:51:5: error: expected ';' after class definition
     }
     ^
solution.cpp: In member function 'std::vector<std::vector<int> > Solution::threeSum(std::vector<int>&)':
solution.cpp:39:62: error: 'j' was not declared in this scope
                 if (map.find(gap) != map.end() && map[gap] > j) {
                                                              ^
solution.cpp:42:83: error: no matching function for call to 'std::vector<int>::vector(<brace-enclosed initializer list>)'
                         res.push_back(vector<int>{nums[i], nums[j], nums[map[gap]]});
                                                                                   ^
solution.cpp:42:83: note: candidates are:
In file included from /usr/include/c++/4.9/vector:64:0,
                 from solution.cpp:17:
/usr/include/c++/4.9/bits/stl_vector.h:401:9: note: template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&)
         vector(_InputIterator __first, _InputIterator __last,
         ^
/usr/include/c++/4.9/bits/stl_vector.h:401:9: note:   template argument deduction/substitution failed:
/usr/include/c++/4.9/bits/stl_vector.h:373:7: note: std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = int; _Alloc = std::allocator<int>; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<int>]
       vector(initializer_list<value_type> __l,
       ^
/usr/include/c++/4.9/bits/stl_vector.h:373:7: note:   candidate expects 2 arguments, 3 provided
/usr/include/c++/4.9/bits/stl_vector.h:348:7: note: std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&) [with _Tp = int; _Alloc = std::allocator<int>; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<int>]
       vector(vector&& __rv, const allocator_type& __m)
       ^
/usr/include/c++/4.9/bits/stl_vector.h:348:7: note:   candidate expects 2 arguments, 3 provided
/usr/include/c++/4.9/bits/stl_vector.h:339:7: note: std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, const allocator_type&) [with _Tp = int; _Alloc = std::allocator<int>; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<int>]
       vector(const vector& __x, const allocator_type& __a)
       ^
/usr/include/c++/4.9/bits/stl_vector.h:339:7: note:   candidate expects 2 arguments, 3 provided
/usr/include/c++/4.9/bits/stl_vector.h:335:7: note: std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = int; _Alloc = std::allocator<int>]
       vector(vector&& __x) noexcept
       ^
/usr/include/c++/4.9/bits/stl_vector.h:335:7: note:   candidate expects 1 argument, 3 provided
/usr/include/c++/4.9/bits/stl_vector.h:318:7: note: std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = int; _Alloc = std::allocator<int>]
       vector(const vector& __x)
       ^
/usr/include/c++/4.9/bits/stl_vector.h:318:7: note:   candidate expects 1 argument, 3 provided
/usr/include/c++/4.9/bits/stl_vector.h:289:7: note: std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>::size_type, const value_type&, const allocator_type&) [with _Tp = int; _Alloc = std::allocator<int>; std::vector<_Tp, _Alloc>::size_type = long unsigned int; std::vector<_Tp, _Alloc>::value_type = int; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<int>]
       vector(size_type __n, const value_type& __value,
       ^
/usr/include/c++/4.9/bits/stl_vector.h:289:7: note:   no known conversion for argument 2 from '<type error>' to 'const value_type& {aka const int&}'
/usr/include/c++/4.9/bits/stl_vector.h:277:7: note: std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>::size_type, const allocator_type&) [with _Tp = int; _Alloc = std::allocator<int>; std::vector<_Tp, _Alloc>::size_type = long unsigned int; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<int>]
       vector(size_type __n, const allocator_type& __a = allocator_type())
       ^
/usr/include/c++/4.9/bits/stl_vector.h:277:7: note:   candidate expects 2 arguments, 3 provided
/usr/include/c++/4.9/bits/stl_vector.h:264:7: note: std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = int; _Alloc = std::allocator<int>; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<int>]
       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
       ^
/usr/include/c++/4.9/bits/stl_vector.h:264:7: note:   candidate expects 1 argument, 3 provided
/usr/include/c++/4.9/bits/stl_vector.h:253:7: note: std::vector<_Tp, _Alloc>::vector() [with _Tp = int; _Alloc = std::allocator<int>]
       vector()
       ^
/usr/include/c++/4.9/bits/stl_vector.h:253:7: note:   candidate expects 0 arguments, 3 provided
solution.cpp:48:27: error: 'i' was not declared in this scope
             while (nums[++i] == nums[i-1]);
                           ^
solution.cpp: At global scope:
solution.cpp:113:1: error: expected declaration before '}' token
 };
 ^
